fix text/footer overlap

--- a/less/site.less
+++ b/less/site.less
@@ -48,6 +48,7 @@ body {
   height: 100%;
   display: flex;
   flex-wrap: wrap;
+  padding: 1em;
   @media screen and (max-width:877px) {
     height: auto;
   }
@@ -88,7 +89,7 @@ body {
 }
 .w-100-small {
   @media screen and (max-width:877px) {
-    width: 90%;
+    width: 100%;
   }
 }
 .footer-wrap{
